QR Code Feature & UI Adjustment & Bug Fixes
- Added QR Code feature using 'react-qr-code'
- Allow windows width to be responsive and stay in the center
- Introduced word-wrap in CID text
- General bug fixes, text adjustment, back button not working

--- a/fil-quest-1/package.json
+++ b/fil-quest-1/package.json
@@ -10,6 +10,7 @@
     "nft.storage": "^7.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-qr-code": "^2.0.12",
     "react-scripts": "5.0.1",
     "react-webcam": "^7.1.1",
     "rpgui": "^1.0.3",
